# linemod_dev

./: CMakeLists.txt
src/: linemod.cpp  linemod_icp.cpp  linemod_icp.h  pose_refine.cpp  pose_refine.h  utils.cpp  utils.h
src/App/: CMakeLists.txt  linemod_test.cpp
src/test/: CMakeLists.txt  opencv_test.cpp  read_depth_and_show.cpp
